add lacinia & artemis deps, begin graphql endpoint